--- a/html/about.html
+++ b/html/about.html
@@ -28,7 +28,7 @@
         <div class="content">
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/about1.jpg" alt="">
+                    <img src="../assets/img/tienda.jpg" alt="">
                 </div>
                 <h2>HECTOR'S SHOP</h2>
                 <p>We are a complete shop, located in Maracaibo, Zulia - Venezuela. 
@@ -37,7 +37,7 @@
             </div>
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/pexels-anthony-shkraba-5486120.jpg" alt="">
+                    <img src="../assets/img/cliente.png" alt="">
                 </div>
                 <h2>About you</h2>
                 <p>Without our clients, we are nothing, that's why we have the best employees in the world, because we want you to be confortable y our shop, and of course we need you, in this image you can see one of our best employees, she is a very kind and polite girl with a lot of experience, passion and patience</p>
