--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,7 @@
         <div class="content">
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/mueble1.jpg" alt="">
+                    <img src="../assets/img/couch.jpg" alt="">
                 </div>
                 <h2>Confortable Couch</h2>
                 <h3>Price: <strong>$10000</strong></h3>
@@ -36,7 +36,7 @@
             </div>
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/mueble2.jpg" alt="">
+                    <img src="../assets/img/sink.jpg" alt="">
                 </div>
                 <h2>Amazing Sink</h2>
                 <h3>Price: <strong>$1500</strong></h3>
@@ -44,7 +44,7 @@
             </div>
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/mueble5.jpg" alt="">
+                    <img src="../assets/img/dining.jpg" alt="">
                 </div>
                 <h2>Dining Set</h2>
                 <h3>Price: <strong>$4500</strong></h3>
@@ -52,7 +52,7 @@
             </div>
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/mueble4.jpg" alt="">
+                    <img src="../assets/img/kitchen.jpg" alt="">
                 </div>
                 <h2>Kitchen Model</h2>
                 <h3>Price: <strong>$20000</strong></h3>
