--- a/html/mission.html
+++ b/html/mission.html
@@ -28,7 +28,7 @@
         <div class="content">
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/about.jpg" alt="">
+                    <img src="../assets/img/vendedora.jpg" alt="">
                 </div>
                 <h2>OUR MISSION</h2>
                 <p>The most important thing for us is to make you happy with our services, products and employees, our mission is bringing the best choices for you, the cheapest and the most expensives ones, choice the best option for you, and let you satisfied
