--- a/html/products.html
+++ b/html/products.html
@@ -28,7 +28,7 @@
         <div class="content">
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/clothes1.jpg" alt="">
+                    <img src="../assets/img/purse.jpg" alt="">
                 </div>
                 <h2>Lightbrown Purse</h2>
                 <h3>Price: <strong>$20</strong></h3>
@@ -36,7 +36,7 @@
             </div>
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/clothes2.jpg" alt="">
+                    <img src="../assets/img/suit.jpg" alt="">
                 </div>
                 <h2>Suit and Tie</h2>
                 <h3>Price: <strong>$15</strong></h3>
@@ -44,7 +44,7 @@
             </div>
             <div class="product">
                 <div class="div-img">
-                    <img src="../assets/img/clothes3.jpg" alt="">
+                    <img src="../assets/img/tshirt.png" alt="">
                 </div>
                 <h2>Aesthetic T-shirt</h2>
                 <h3>Price: <strong>$5</strong></h3>
@@ -52,7 +52,7 @@
             </div>
             <div class="product">
                 <div class="div-img diiv">
-                    <img src="../assets/img/clothes9.jpg" alt="">
+                    <img src="../assets/img/mens.jpg" alt="">
                 </div>
                 <h2>Men's set</h2>
                 <h3>Price: <strong>$20</strong></h3>
